java-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: my-app.com
    http:
      paths:
      - backend:
          service:
            name: java-service
            port:
              number: 8080
        pathType: Prefix
        path: /
